--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<p>
-  home works!
-</p>
+<div class="c-block">
+  <h2>Welcome Home!</h2>
+  <a class="btn btn-primary" routerLink="/todo">Show Todo List</a>
+</div>
